content/1.2.0/getting-started.mdx
---
id: 1
title: Getting Started with SoundFlow
description: Learn how to install the library, set up your development environment, and write your first SoundFlow application.
navOrder: 1
category: Core
---

import {Icon} from "@iconify/react";
import {Tab, Tabs} from "@heroui/react";
import { Steps, Step } from '/src/components/Shared/Steps';

# Getting Started with SoundFlow

This guide will help you get up and running with SoundFlow quickly. You'll learn how to install the library, set up your development environment, and write your first SoundFlow application.

## Prerequisites

Before you begin, make sure you have the following installed:

*   **[.NET SDK 8.0](https://dotnet.microsoft.com/download/dotnet/8.0) or later:** SoundFlow is built on .NET 8.0, so you'll need the corresponding SDK to build and run SoundFlow projects.
*   **An IDE or code editor:** You can use any IDE or code editor that supports .NET development. Popular choices include:
    *   [Visual Studio](https://visualstudio.microsoft.com/) (Recommended for Windows)
    *   [Visual Studio Code](https://code.visualstudio.com/) (Cross-platform)
    *   [JetBrains Rider](https://www.jetbrains.com/rider/) (Cross-platform)
*   **Basic knowledge of C# and .NET:** Familiarity with C# programming and .NET concepts will be helpful.

**Supported Operating Systems:**

*   Windows
*   macOS
*   Linux
*   Android
*   iOS
*   FreeBSD

## Installation

You can install SoundFlow in several ways:

<Tabs color="primary" variant="bordered" aria-label="Installation options">
    <Tab
        key="nuget"
        title={
            <div className="flex items-center gap-2">
                <Icon icon='simple-icons:nuget' />
                <span>NuGet Package Manager</span>
            </div>
        }
    >
        ### Option 1: Using the NuGet Package Manager (Recommended)

        This is the easiest and recommended way to add SoundFlow to your .NET projects.

        1. **Open the NuGet Package Manager Console:** In Visual Studio, go to `Tools` > `NuGet Package Manager` > `Package Manager Console`.
        2. **Run the installation command:**

        ```bash
        Install-Package SoundFlow
        ```

        This command will download and install the latest version of SoundFlow and its dependencies into your current project.
    </Tab>

    <Tab
        key="cli"
        title={
            <div className="flex items-center gap-2">
                <Icon icon='simple-icons:dotnet' />
                <span>.NET CLI</span>
            </div>
        }
    >
        ### Option 2: Using the .NET CLI

        1. **Open your terminal or command prompt.**
        2. **Navigate to your project directory.**
        3. **Run the following command:**

        ```bash
        dotnet add package SoundFlow
        ```

        This command will add a reference to the SoundFlow package in your project file (`.csproj`).
    </Tab>

    <Tab
        key="source"
        title={
            <div className="flex items-center gap-2">
                <Icon icon='simple-icons:git' />
                <span>Building from Source</span>
            </div>
        }
    >
        ### Option 3: Building from Source

        If you want to use the latest development version of SoundFlow or contribute to the project, you can build it from source:

        1. **Clone the SoundFlow repository:**

        ```bash
        git clone https://github.com/LSXPrime/SoundFlow.git
        ```

        2. **Navigate to the cloned directory:**

        ```bash
        cd SoundFlow
        ```

        3. **Build the project using the .NET CLI:**

        ```bash
        dotnet build
        ```
    </Tab>
</Tabs>

## Basic Usage Example

Let's create a simple console application that plays an audio file using SoundFlow.

<Steps layout='horizontal' nextLabel='Got it, Next' finishLabel='All Done!' resetLabel='Start Again' summaryMessage="Congratulations! You've built and run your first audio application with SoundFlow. Feel free to experiment with the code or start over.">
    <Step title="Create Project" description="Use VS or .NET CLI" icon='ic:outline-create-new-folder'>
        ### 1. Create a new console application:
        *   In Visual Studio, go to `File` > `New` > `Project`. Select `Console App` and give it a name (e.g., `SoundFlowExample`).
        *   Or, use the .NET CLI:

        ```bash
        dotnet new console -o SoundFlowExample
        cd SoundFlowExample
        ```
    </Step>

    <Step title="Install Package" description="Add SoundFlow via NuGet" icon='lucide:download'>
        ### 2. Install the SoundFlow NuGet package: (If you haven't already)

        ```bash
        Install-Package SoundFlow
        ```

        <div style={{textAlign: 'center'}}>OR</div>

        ```bash
        dotnet add package SoundFlow
        ```
    </Step>

    <Step title="Write Code" description="Implement the audio player" icon='ph:code-bold'>
        ### 3. Replace the contents of `Program.cs` with the following code:

        ```csharp
        using SoundFlow.Abstracts;
        using SoundFlow.Abstracts.Devices;
        using SoundFlow.Backends.MiniAudio;
        using SoundFlow.Components;
        using SoundFlow.Enums;
        using SoundFlow.Interfaces;
        using SoundFlow.Providers;
        using SoundFlow.Structs;

        namespace SoundFlowExample;

        internal static class Program
        {
            private static void Main(string[] args)
            {
                // 1. Initialize the engine context. It no longer starts a device directly.
                using var engine = new MiniAudioEngine();

                // 2. Define the audio format for playback.
                var format = new AudioFormat
                {
                    SampleRate = 48000,
                    Channels = 2,
                    Format = SampleFormat.F32
                };
                
                // 3. Initialize a specific playback device. Passing `null` will use the system default too.
                // The `using` statement ensures the device is properly disposed.
                var defaultDevice = engine.PlaybackDevices.FirstOrDefault(x => x.IsDefault);
                using var playbackDevice = engine.InitializePlaybackDevice(defaultDevice, format);

                // 4. Create a SoundPlayer, passing the engine and format context.
                // Make sure you replace "path/to/your/audiofile.wav" with the actual path.
                using var dataProvider = new StreamDataProvider(engine, format, File.OpenRead("path/to/your/audiofile.wav"));
                var player = new SoundPlayer(engine, format, dataProvider);

                // 5. Add the player to the device's master mixer.
                playbackDevice.MasterMixer.AddComponent(player);

                // 6. Start the device to begin the audio stream.
                playbackDevice.Start();
                
                // 7. Start the player.
                player.Play();

                Console.WriteLine($"Playing audio on '{playbackDevice.Info?.Name}'... Press any key to stop.");
                Console.ReadKey();

                // 8. Stop the device, which also stops the audio stream.
                playbackDevice.Stop();
            }
        }
        ```
        ***Replace `path/to/your/audiofile.wav` with the actual path to an audio file on your computer.***
    </Step>

    <Step title="Run" description="Build and run the app" icon='lucide:audio-lines'>
        ### 4. Build and run the application:
        *   In Visual Studio, press `F5` or go to `Debug` > `Start Debugging`.

        <div style={{textAlign: 'center'}}>OR</div>

        *  use the .NET CLI:

        ```bash
        dotnet run
        ```
    </Step>
</Steps>

You should now hear the audio file playing through your default audio output device.

**Code Explanation:**

*   `using SoundFlow...`: These lines import the necessary namespaces from the SoundFlow library.
*   `using var engine = new MiniAudioEngine()`: This creates an instance of the `AudioEngine`. In the new architecture, the engine acts as a central **context** or **factory** for creating and managing audio devices. It no longer represents a single device itself.
*   `var format = new AudioFormat { ... }`: We define the desired audio format using the `AudioFormat` struct. This bundles the sample rate, channel count, and sample format, and is passed to devices and components to ensure they operate in the correct context.
*   `var defaultDevice = engine.PlaybackDevices.FirstOrDefault(...);` Getting the first device from the available playback devices.
*   `using var playbackDevice = engine.InitializePlaybackDevice(defaultDevice, format)`: This is the new way to initialize a playback device. We ask the engine to initialize one for us, passing `null` to select the system's default device. The device itself is `IDisposable` and manages its own lifecycle.
*   `using var dataProvider = ...`, `var player = new SoundPlayer(...)`: Components like `ISoundDataProvider` and `SoundPlayer` now require the `engine` and `format` contexts in their constructors.
*   `playbackDevice.MasterMixer.AddComponent(player)`: This adds the `SoundPlayer` to the device-specific `Master` mixer, Each `AudioPlaybackDevice` has its own `MasterMixer` property. The `Master` mixer is the root of the audio graph and represents the final output of the audio device solely.
*   `playbackDevice.Start()`: You must now explicitly start the device to begin its audio processing thread.
*   `player.Play()`: This starts the player's internal logic, causing it to generate audio when its `Process` method is called by the device's mixer.
*   `playbackDevice.Stop()`: This stops the device's audio thread, gracefully halting all audio output from it.

## Troubleshooting

*   **"Could not load file or assembly 'SoundFlow'..."**: Make sure you have installed the SoundFlow NuGet package or added a reference to the SoundFlow library if you built it from source.
*   **No audio output**:
    *   Verify that your audio device is properly configured and selected as the default output device in your operating system's sound settings.
    *   Check the volume levels in your operating system and in the SoundFlow application.
    *   Ensure that the audio file you are trying to play is in a supported format and is not corrupted.
*   **Errors during installation**: If you encounter errors while installing the NuGet package, try clearing your NuGet cache (`dotnet nuget locals all --clear`) and try again.

If you encounter any other issues, please open an issue on the [GitHub repository](https://github.com/LSXPrime/SoundFlow).

## Next Steps

Now that you have successfully set up SoundFlow and played your first audio file, you can explore the more advanced features and concepts:

*   [Core Concepts](./core-concepts): Learn more about the fundamental building blocks of SoundFlow.
*   [Device Management](./device-management): Understand the new device-centric architecture, including multi-device playback, capture, and device switching.
*   [Editing Engine & Persistence](./editing-engine): Discover the powerful non-destructive editing and project saving capabilities.
*   [API Reference](./api-reference): Dive into the detailed documentation for each class and interface.
*   [Tutorials and Examples](./tutorials-and-examples): Get hands-on experience with various SoundFlow features.

Happy coding!